adding webgears reference

--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
             <div class="col-lg-4 col-md-6">
                 <a href="http://phios.li/"><img class="img-responsive" src="img/references/phios_logo.png" alt="phios" /></a>
             </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="http://www.webgears.at/"><img class="img-responsive" src="img/references/wg-logo-footer-icon.jpg" alt="Webgears" /></a>
+            </div>
         </div>
     </section>
 
