inet logistics reference and some design adaptions for references

--- a/index.html
+++ b/index.html
@@ -183,16 +183,19 @@
                 <a href="http://www.fhv.at/"><img class="img-responsive" src="img/references/fhv_logo.png" alt="Fachhochschule Vorarlberg" /></a>
             </div>
             <div class="col-lg-4 col-md-6">
+                <a href="http://www.webgears.at/"><img class="img-responsive" src="img/references/wg-logo-footer-icon.jpg" alt="Webgears" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
                 <a href="http://www.v-research.at/"><img class="img-responsive" src="img/references/V-Research_03_grau.jpg" alt="v-research" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="https://www.inet-logistics.com/"><img class="img-responsive" src="img/references/inetlog.jpg" alt="inet logistics" /></a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a href="http://www.solve-engineering.ch/"><img class="img-responsive" src="img/references/solve_logo.png" alt="Solve Engineering" /></a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a href="http://phios.li/"><img class="img-responsive" src="img/references/phios_logo.png" alt="phios" /></a>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <a href="http://www.webgears.at/"><img class="img-responsive" src="img/references/wg-logo-footer-icon.jpg" alt="Webgears" /></a>
             </div>
         </div>
     </section>
