--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@
             <div class="col-lg-4 col-md-6">
                 <a href="http://phios.li/"><img class="img-responsive" src="img/references/phios_logo.png" alt="phios" /></a>
             </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="https://www.kuenz.com/"><img class="img-responsive" src="img/references/kuenz.jpg" alt="kuenz" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="https://www.towa-digital.com"><img class="img-responsive" src="img/references/towa.png" alt="TOWA" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="https://www.mpreis.at"><img class="img-responsive" src="img/references/mpreis.png" alt="MPREIS" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="http://www.kuhnhenn-baustofftechnologie.ch"><img class="img-responsive" src="img/references/kuhnhenn.jpg" alt="Kuhnhenn Baustofftechnologie" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="http://www.dorner-asp.com/"><img class="img-responsive" src="img/references/dornerasp.png" alt="Dorner ASP" /></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <a href="https://www.soplar.com"><img class="img-responsive" src="img/references/soplar.png" alt="Soplar" /></a>
+            </div>
         </div>
     </section>
 
